--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,11 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Literata:wght@300;400;500;600;700;800;900&family=Nunito+Sans:wght@400;600;900&display=swap"
       rel="stylesheet"
     />
   </head>
